# newhomes_discovery

./: .gitignore  README.md  config.example.toml  pyproject.toml
newhomes/: config.py  entity_resolution.py  exporter.py
newhomes/cli/: main.py
newhomes/core/: audit.py  http.py  normalise.py
newhomes/llm/: client.py  parent_brand.py
newhomes/resolvers/: facebook.py  project_site.py
newhomes/sources/: allhomes_com_au.py  base.py  domain_com_au.py  firsthome.py  google_serp.py  hia.py  homely_com_au.py  planning_nsw.py  property_council.py  realestate_com_au.py  udia.py  urban_com_au.py
newhomes/store/: db.py  models.py
newhomes_discovery.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
sql/: schema.sql
tests/: test_normalise.py  test_pipeline_smoke.py
