[project]
name = "newhomes-discovery"
version = "0.1.0"
description = "Discover and catalogue new-home developers and projects across Australia."
requires-python = ">=3.11"
dependencies = [
    "httpx[http2]>=0.27",
    "selectolax>=0.3.21",          # fast HTML parser
    "tenacity>=8.2",                # retries
    "tldextract>=5.1",              # domain canonicalisation
    "rapidfuzz>=3.6",               # fuzzy name matching
    "typer>=0.12",                  # CLI
    "rich>=13.7",                   # logging output
    "pydantic>=2.6",
    "tomli>=2.0; python_version<'3.11'",
    "anthropic>=0.34",              # Claude SDK
    "playwright>=1.44",             # for portal scraping
    "tldextract>=5.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21"]

[project.scripts]
newhomes = "newhomes.cli.main:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["newhomes*"]
